--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.4",
+    "module": "^1.2.5",
+    "next": "^14.2.4",
+    "node": "^22.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.24.1"
